slider and gallery

--- a/index.html
+++ b/index.html
@@ -139,54 +139,142 @@
           <h1 class="news__title_text">latest news</h1>
         </div>
         <div class="news__block">
-          <div class="news__element">
-            <img src="./images/news/lauren-mancke-60633.png" alt="first_picture">
-            <h1 class="news__theme">
-              See The Unmatched <p>Beauty Of The Great lakes.</p>
-            </h1>
-            <p class="news__text">Free directories: directories are perfect for customers that are... searching for ...
-            </p>
-            <div class="author">
-              <img src="/images/news/issaac.png" alt="issaac">
-              <div class="author__info">
-                <p class="author__name">Isaac Dunn</p>
-                <p class="author__date">09 Feb 2017</p>
-              </div>
+          <div class="slider">
+            <div class="news__element">
+              <img src="./images/news/lauren-mancke-60633.png" alt="first_picture">
+              <h1 class="news__theme">
+                See The Unmatched <p>Beauty Of The Great lakes.</p>
+              </h1>
+              <p class="news__text">Free directories: directories are perfect for customers that are... searching for
+                ...
+              </p>
+              <div class="author">
+                <img src="/images/news/issaac.png" alt="issaac">
+                <div class="author__info">
+                  <p class="author__name">Isaac Dunn</p>
+                  <p class="author__date">09 Feb 2017</p>
+                </div>
 
+              </div>
             </div>
-          </div>
 
-          <div class="news__element">
-            <img src="./images/matthew-hamilton-202227.png" alt="first_picture">
-            <h1 class="news__theme">
-              Effective Advertising <p>Pointers.</p>
-            </h1>
-            <p class="news__text">Having a home based business is a wonderful asset to your life...
-            </p>
-            <div class="author">
-              <img src="/images/news/dominic.png" alt="issaac">
-              <div class="author__info">
-                <p class="author__name">Dominic Freeman</p>
-                <p class="author__date">24 Apr 2017</p>
+            <div class="news__element">
+              <img src="./images/matthew-hamilton-202227.png" alt="first_picture">
+              <h1 class="news__theme">
+                Effective Advertising <p>Pointers.</p>
+              </h1>
+              <p class="news__text">Having a home based business is a wonderful asset to your life...
+              </p>
+              <div class="author">
+                <img src="/images/news/dominic.png" alt="issaac">
+                <div class="author__info">
+                  <p class="author__name">Dominic Freeman</p>
+                  <p class="author__date">24 Apr 2017</p>
+                </div>
+
               </div>
-
             </div>
-          </div>
 
 
-          <div class="news__element">
-            <img src="./images/news/lauren-mancke-60633.png" alt="first_picture">
-            <h1 class="news__theme">
-              Hypnotize Yourself <p>Into The Ghost.</p>
-            </h1>
-            <p class="news__text">There are many things that are important to catalog design....</p>
-            <div class="author">
-              <img src="/images/news/alice.png" alt="issaac">
-              <div class="author__info">
-                <p class="author__name">Alice Ward</p>
-                <p class="author__date">30 Dec 2017</p>
+            <div class="news__element">
+              <img src="./images/news/lauren-mancke-60633.png" alt="first_picture">
+              <h1 class="news__theme">
+                Hypnotize Yourself <p>Into The Ghost.</p>
+              </h1>
+              <p class="news__text">There are many things that are important to catalog design....</p>
+              <div class="author">
+                <img src="/images/news/alice.png" alt="issaac">
+                <div class="author__info">
+                  <p class="author__name">Alice Ward</p>
+                  <p class="author__date">30 Dec 2017</p>
+                </div>
+
               </div>
+            </div>
 
+
+            <div class="news__element">
+              <img src="./images/news/lauren-mancke-60633.png" alt="first_picture">
+              <h1 class="news__theme">
+                Hypnotize Yourself <p>Into The Ghost.</p>
+              </h1>
+              <p class="news__text">There are many things that are important to catalog design....</p>
+              <div class="author">
+                <img src="/images/news/alice.png" alt="issaac">
+                <div class="author__info">
+                  <p class="author__name">Alice Ward</p>
+                  <p class="author__date">30 Dec 2017</p>
+                </div>
+
+              </div>
+            </div>
+
+
+            <div class="news__element">
+              <img src="./images/news/lauren-mancke-60633.png" alt="first_picture">
+              <h1 class="news__theme">
+                Hypnotize Yourself <p>Into The Ghost.</p>
+              </h1>
+              <p class="news__text">There are many things that are important to catalog design....</p>
+              <div class="author">
+                <img src="/images/news/alice.png" alt="issaac">
+                <div class="author__info">
+                  <p class="author__name">Alice Ward</p>
+                  <p class="author__date">30 Dec 2017</p>
+                </div>
+
+              </div>
+            </div>
+
+
+            <div class="news__element">
+              <img src="./images/news/lauren-mancke-60633.png" alt="first_picture">
+              <h1 class="news__theme">
+                Hypnotize Yourself <p>Into The Ghost.</p>
+              </h1>
+              <p class="news__text">There are many things that are important to catalog design....</p>
+              <div class="author">
+                <img src="/images/news/alice.png" alt="issaac">
+                <div class="author__info">
+                  <p class="author__name">Alice Ward</p>
+                  <p class="author__date">30 Dec 2017</p>
+                </div>
+
+              </div>
+            </div>
+
+
+            <div class="news__element">
+              <img src="./images/news/lauren-mancke-60633.png" alt="first_picture">
+              <h1 class="news__theme">
+                Hypnotize Yourself <p>Into The Ghost.</p>
+              </h1>
+              <p class="news__text">There are many things that are important to catalog design....</p>
+              <div class="author">
+                <img src="/images/news/alice.png" alt="issaac">
+                <div class="author__info">
+                  <p class="author__name">Alice Ward</p>
+                  <p class="author__date">30 Dec 2017</p>
+                </div>
+
+              </div>
+            </div>
+
+
+            <div class="news__element">
+              <img src="./images/news/lauren-mancke-60633.png" alt="first_picture">
+              <h1 class="news__theme">
+                Hypnotize Yourself <p>Into The Ghost.</p>
+              </h1>
+              <p class="news__text">There are many things that are important to catalog design....</p>
+              <div class="author">
+                <img src="/images/news/alice.png" alt="issaac">
+                <div class="author__info">
+                  <p class="author__name">Alice Ward</p>
+                  <p class="author__date">30 Dec 2017</p>
+                </div>
+
+              </div>
             </div>
           </div>
         </div>
@@ -194,6 +282,54 @@
     </div>
   </section>
 
+  <section class="gallery" id="projects">
+    <div class="container">
+      <div class="row gallery__position">
+        <div class="gallery__title">
+          <h1 class="gallery__title_text">Gallery</h1>
+        </div>
+
+        <div class="gallery__pictures">
+          <div class="col-6 gallery__firstbox">
+            <img src="/images/360.png" alt="360deg">
+          </div>
+          <div class="col-6 gallery__container">
+            <div class="col-6 gallery__box gallery__box--left">
+              <img class="gallery__picture" src="/images/gallery/photos-13323p6Bdc0uhr8Bq.png" alt="house">
+              <img class="gallery__picture" src="/images/gallery/fuse-brussels-169216.png" alt="fuse">
+            </div>
+            <div class="col-6 gallery__box gallery__box--right">
+              <img class="gallery__picture" src="/images/gallery/echo-grid-156713.png" alt="echo">
+              <img class="gallery__picture" src="/images/gallery/tu-tram-pham-202263.png" alt="tu-tram-pham">
+            </div>
+          </div>
+        </div>
+
+        <button class="about__button gallery__button" type="button">See more</button>
+      </div>
+    </div>
+  </section>
+
+
+
+
+
+
+
+
+
+
+
+  <!-- Scripts -->
+
+  <!-- Подлючаем JQuery -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+  <!-- Подключаем слайдер Slick -->
+  <script src="/js/slick.min.js"></script>
+
+  <!-- Подключаем файл скриптов -->
+  <script src="/js/script.js"></script>
 </body>
 
 </html>
