--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="Start Template">
   <meta name="author" content="Admin">
-  <title>Exam</title>
+  <title>Monticello</title>
 
   <link rel="icon" href="images/favicon.png">
   <link rel="stylesheet" href="css/bootstrap-grid.min.css">
@@ -87,7 +87,7 @@
 
             <div class="about__geolocation">
               <h1 class="about__geolocation__text">
-                <img class="about__geolocation__icon" src="/images/geo2.jpg" alt="icon_geolocation">
+                <img class="about__geolocation__icon" src="images/geo2.jpg" alt="icon_geolocation">
                 New York City, United States - 1776 feet
               </h1>
             </div>
@@ -118,7 +118,7 @@
 
             <div class="about__geolocation">
               <h1 class="about__geolocation__text">
-                <img class="about__geolocation__icon" src="/images/geo2.jpg" alt="icon_geolocation">
+                <img class="about__geolocation__icon" src="images/geo2.jpg" alt="icon_geolocation">
                 Hong Kong - 1588 Feet
               </h1>
             </div>
@@ -139,7 +139,11 @@
           <h1 class="news__title_text">latest news</h1>
         </div>
         <div class="news__block">
+
+          <!-- Slider -->
           <div class="slider">
+
+            <!-- element of slider -->
             <div class="news__element">
               <img src="./images/news/lauren-mancke-60633.png" alt="first_picture">
               <h1 class="news__theme">
@@ -149,7 +153,7 @@
                 ...
               </p>
               <div class="author">
-                <img src="/images/news/issaac.png" alt="issaac">
+                <img src="images/news/issaac.png" alt="issaac">
                 <div class="author__info">
                   <p class="author__name">Isaac Dunn</p>
                   <p class="author__date">09 Feb 2017</p>
@@ -158,6 +162,7 @@
               </div>
             </div>
 
+            <!-- element of slider -->
             <div class="news__element">
               <img src="./images/matthew-hamilton-202227.png" alt="first_picture">
               <h1 class="news__theme">
@@ -166,7 +171,7 @@
               <p class="news__text">Having a home based business is a wonderful asset to your life...
               </p>
               <div class="author">
-                <img src="/images/news/dominic.png" alt="issaac">
+                <img src="images/news/dominic.png" alt="issaac">
                 <div class="author__info">
                   <p class="author__name">Dominic Freeman</p>
                   <p class="author__date">24 Apr 2017</p>
@@ -175,7 +180,7 @@
               </div>
             </div>
 
-
+            <!-- element of slider -->
             <div class="news__element">
               <img src="./images/news/lauren-mancke-60633.png" alt="first_picture">
               <h1 class="news__theme">
@@ -183,7 +188,7 @@
               </h1>
               <p class="news__text">There are many things that are important to catalog design....</p>
               <div class="author">
-                <img src="/images/news/alice.png" alt="issaac">
+                <img src="images/news/alice.png" alt="issaac">
                 <div class="author__info">
                   <p class="author__name">Alice Ward</p>
                   <p class="author__date">30 Dec 2017</p>
@@ -192,7 +197,7 @@
               </div>
             </div>
 
-
+            <!-- element of slider -->
             <div class="news__element">
               <img src="./images/news/lauren-mancke-60633.png" alt="first_picture">
               <h1 class="news__theme">
@@ -200,7 +205,7 @@
               </h1>
               <p class="news__text">There are many things that are important to catalog design....</p>
               <div class="author">
-                <img src="/images/news/alice.png" alt="issaac">
+                <img src="images/news/alice.png" alt="issaac">
                 <div class="author__info">
                   <p class="author__name">Alice Ward</p>
                   <p class="author__date">30 Dec 2017</p>
@@ -209,7 +214,7 @@
               </div>
             </div>
 
-
+            <!-- element of slider -->
             <div class="news__element">
               <img src="./images/news/lauren-mancke-60633.png" alt="first_picture">
               <h1 class="news__theme">
@@ -217,7 +222,7 @@
               </h1>
               <p class="news__text">There are many things that are important to catalog design....</p>
               <div class="author">
-                <img src="/images/news/alice.png" alt="issaac">
+                <img src="images/news/alice.png" alt="issaac">
                 <div class="author__info">
                   <p class="author__name">Alice Ward</p>
                   <p class="author__date">30 Dec 2017</p>
@@ -226,7 +231,7 @@
               </div>
             </div>
 
-
+            <!-- element of slider -->
             <div class="news__element">
               <img src="./images/news/lauren-mancke-60633.png" alt="first_picture">
               <h1 class="news__theme">
@@ -234,7 +239,7 @@
               </h1>
               <p class="news__text">There are many things that are important to catalog design....</p>
               <div class="author">
-                <img src="/images/news/alice.png" alt="issaac">
+                <img src="images/news/alice.png" alt="issaac">
                 <div class="author__info">
                   <p class="author__name">Alice Ward</p>
                   <p class="author__date">30 Dec 2017</p>
@@ -243,7 +248,7 @@
               </div>
             </div>
 
-
+            <!-- element of slider -->
             <div class="news__element">
               <img src="./images/news/lauren-mancke-60633.png" alt="first_picture">
               <h1 class="news__theme">
@@ -251,7 +256,7 @@
               </h1>
               <p class="news__text">There are many things that are important to catalog design....</p>
               <div class="author">
-                <img src="/images/news/alice.png" alt="issaac">
+                <img src="images/news/alice.png" alt="issaac">
                 <div class="author__info">
                   <p class="author__name">Alice Ward</p>
                   <p class="author__date">30 Dec 2017</p>
@@ -260,7 +265,7 @@
               </div>
             </div>
 
-
+            <!-- element of slider -->
             <div class="news__element">
               <img src="./images/news/lauren-mancke-60633.png" alt="first_picture">
               <h1 class="news__theme">
@@ -268,7 +273,7 @@
               </h1>
               <p class="news__text">There are many things that are important to catalog design....</p>
               <div class="author">
-                <img src="/images/news/alice.png" alt="issaac">
+                <img src="images/news/alice.png" alt="issaac">
                 <div class="author__info">
                   <p class="author__name">Alice Ward</p>
                   <p class="author__date">30 Dec 2017</p>
@@ -282,6 +287,9 @@
     </div>
   </section>
 
+
+  <!-- section gallery -->
+
   <section class="gallery" id="projects">
     <div class="container">
       <div class="row gallery__position">
@@ -291,16 +299,16 @@
 
         <div class="gallery__pictures">
           <div class="col-6 gallery__firstbox">
-            <img src="/images/360.png" alt="360deg">
+            <img src="images/360.png" alt="360deg">
           </div>
           <div class="col-6 gallery__container">
             <div class="col-6 gallery__box gallery__box--left">
-              <img class="gallery__picture" src="/images/gallery/photos-13323p6Bdc0uhr8Bq.png" alt="house">
-              <img class="gallery__picture" src="/images/gallery/fuse-brussels-169216.png" alt="fuse">
+              <img class="gallery__picture" src="images/gallery/photos-13323p6Bdc0uhr8Bq.png" alt="house">
+              <img class="gallery__picture" src="images/gallery/fuse-brussels-169216.png" alt="fuse">
             </div>
             <div class="col-6 gallery__box gallery__box--right">
-              <img class="gallery__picture" src="/images/gallery/echo-grid-156713.png" alt="echo">
-              <img class="gallery__picture" src="/images/gallery/tu-tram-pham-202263.png" alt="tu-tram-pham">
+              <img class="gallery__picture" src="images/gallery/echo-grid-156713.png" alt="echo">
+              <img class="gallery__picture" src="images/gallery/tu-tram-pham-202263.png" alt="tu-tram-pham">
             </div>
           </div>
         </div>
@@ -326,10 +334,10 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
   <!-- Подключаем слайдер Slick -->
-  <script src="/js/slick.min.js"></script>
+  <script src="js/slick.min.js"></script>
 
   <!-- Подключаем файл скриптов -->
-  <script src="/js/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
