contact us + bags

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
             <div class="about__geolocation">
               <h1 class="about__geolocation__text">
-                <img class="about__geolocation__icon" src="images/geo2.jpg" alt="icon_geolocation">
+                <img class="about__geolocation__icon" src="images/icons/location.svg" alt="icon_geolocation">
                 New York City, United States - 1776 feet
               </h1>
             </div>
@@ -118,7 +118,7 @@
 
             <div class="about__geolocation">
               <h1 class="about__geolocation__text">
-                <img class="about__geolocation__icon" src="images/geo2.jpg" alt="icon_geolocation">
+                <img class="about__geolocation__icon" src="images/icons/location.svg" alt="icon_geolocation">
                 Hong Kong - 1588 Feet
               </h1>
             </div>
@@ -319,14 +319,100 @@
   </section>
 
 
+  <!-- section contact -->
+
+  <section class="contact" id="contact">
+    <div class="container">
+      <div class="row">
+
+        <!-- google map -->
+        <div class="map">
+
+        </div>
+
+
+        <div class="contact__box">
+
+          <div class="contact__title">
+
+            <h1 class="contact__title_text">get in touch</h1>
+
+          </div>
+
+          <div class="contact__content">
+
+            <!-- first Col-6 -->
+            <div class="col-6 contact__part">
+
+              <div class="contact__info">
+                <img src="images/icons/location.svg" alt="location" class="img__element">
+                <p class="contact__info--text">91 Nolan Extensions Suite 670</p>
+              </div>
+
+              <div class="contact__info">
+                <img src="images/icons/phone.svg" alt="phone" class="img__element">
+                <a href="tel:+001 356-868-2454" class="contact__info--text">+001 356-868-2454</a>
+              </div>
+
+              <div class="contact__info">
+                <img src="images/icons/email.svg" alt="mail" class="img__element">
+                <a href="mailto:gahuy93@gmail.com" class="contact__info--text">gahuy93@gmail.com</a>
+              </div>
+
+              <div class="contact__info">
+                <img src="images/icons/four-oclock.svg" alt="time" class="img__element">
+                <p class="contact__info--text">From 07:05AM to 19:30PM</p>
+              </div>
 
 
 
 
+            </div>
+
+            <!-- second Col-6 -->
+            <div class="col-6 contact__input">
+              <form action="#" class="contact__input_form">
+
+                <input class="contact__element-top" type="text" placeholder="Enter your full name">
+                <input class="contact__element-bottom" ctype="text" placeholder="Email">
+
+              </form>
+
+              <button class="about__button contact__button" type="button">Submit</button>
+
+            </div>
+          </div>
 
 
 
 
+        </div>
+
+        <div class="footer">
+          <div class="footer__icons">
+            <a href="#"><img src="images/Logo.png" alt="logo" class="logo__img"></a>
+
+            <div class="socials footer__socials">
+              <a href="https://uk-ua.facebook.com/"><img src="images/face.png" alt="facebook" class="socials__img"></a>
+              <a href="https://twitter.com/login?lang=ru"><img src="images/twitter3.png" alt="twitter"
+                  class="socials__img"></a>
+              <a href="https://www.instagram.com/?hl=ru"><img src="images/instagram-new.png" alt="insta"
+                  class="socials__img"></a>
+
+            </div>
+          </div>
+
+          <div class="footer__info">
+            <span class="footer__text-1">Copyrights © 2017 Monticello Group</span>
+            <span class="footer__text-2">Made with ❤ by Ga Huy</span>
+          </div>
+        </div>
+
+
+      </div>
+    </div>
+
+  </section>
 
   <!-- Scripts -->
 
